Tmp/reverting 3 prev commits (#449)
* Revert "updating poms for 17.0.107-SNAPSHOT development"

This reverts commit 334b30c938bd6bdbd0b1523928aa993cb2823e57.

* Revert "Removin SPI from pom version (#447)"

This reverts commit a923217c749c6ed0608a83ba16918a554c315632.

* Revert "2529 rebase spi to main (#440)"

This reverts commit 476f2d0094dcaad365c8606d8a6d476aa8647b70.

* Removin SPI from pom version

---------

Co-authored-by: Arcadius Ahouansou <arcadius@menelic.com>