@@ -1,16 +1,20 @@
 package uk.gov.moj.cpp.listing.command.handler;
 
 
+import static java.util.Objects.nonNull;
 import static java.util.Optional.empty;
 import static java.util.Optional.ofNullable;
 import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
+import static org.apache.commons.lang3.StringUtils.isBlank;
+import static uk.gov.justice.core.courts.JurisdictionType.MAGISTRATES;
 import static uk.gov.justice.services.core.annotation.Component.COMMAND_HANDLER;
 import static uk.gov.justice.services.core.enveloper.Enveloper.toEnvelopeWithMetadataFrom;
 
+import uk.gov.justice.core.courts.CourtCentre;
+import uk.gov.justice.core.courts.HearingListingNeeds;
 import uk.gov.justice.core.courts.SeedingHearing;
 import uk.gov.justice.listing.commands.CourtCentreDetails;
-import uk.gov.justice.listing.commands.HearingListingNeeds;
 import uk.gov.justice.listing.commands.NonDefaultDay;
 import uk.gov.justice.listing.courts.ChangeNextHearingDay;
 import uk.gov.justice.listing.courts.DeleteNextHearings;
@@ -19,8 +23,8 @@ import uk.gov.justice.listing.courts.ListNextHearing;
 import uk.gov.justice.listing.courts.ListNextHearingsEnrichedV2;
 import uk.gov.justice.listing.courts.RemoveOffencesFromExistingHearing;
 import uk.gov.justice.listing.courts.RemoveSelectedOffencesFromExistingHearing;
-import uk.gov.justice.listing.events.DeleteNextHearingRequested;
 import uk.gov.justice.services.common.converter.JsonObjectToObjectConverter;
+import uk.gov.justice.services.common.converter.ObjectToJsonObjectConverter;
 import uk.gov.justice.services.core.aggregate.AggregateService;
 import uk.gov.justice.services.core.annotation.Handles;
 import uk.gov.justice.services.core.annotation.ServiceComponent;
@@ -28,24 +32,35 @@ import uk.gov.justice.services.eventsourcing.source.core.EventSource;
 import uk.gov.justice.services.eventsourcing.source.core.EventStream;
 import uk.gov.justice.services.eventsourcing.source.core.exception.EventStreamException;
 import uk.gov.justice.services.messaging.JsonEnvelope;
+import uk.gov.moj.cpp.listing.command.factory.HearingTypeFactory;
 import uk.gov.moj.cpp.listing.command.utils.CommandToDomainConverter;
-import uk.gov.moj.cpp.listing.command.utils.HearingListingNeedsConverterCommandToCore;
-import uk.gov.moj.cpp.listing.common.service.HearingSlotsService;
+import uk.gov.moj.cpp.listing.command.utils.NonDefaultDayDurationBuilder;
+import uk.gov.moj.cpp.listing.command.utils.RotaSlotToNonDefaultDayConverter;
+import uk.gov.moj.cpp.listing.common.service.ProvisionalBookingService;
 import uk.gov.moj.cpp.listing.domain.CourtCentreDefaults;
+import uk.gov.moj.cpp.listing.domain.CourtSchedule;
 import uk.gov.moj.cpp.listing.domain.aggregate.Hearing;
 import uk.gov.moj.cpp.listing.domain.aggregate.SeedHearingAggregate;
 
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.inject.Inject;
+import javax.json.JsonArray;
 import javax.json.JsonObject;
+import javax.ws.rs.core.Response;
 
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -56,19 +71,34 @@ import org.slf4j.LoggerFactory;
 public class ListNextHearingCommandHandler {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ListNextHearingCommandHandler.class);
+    private static final ZoneId UTC = ZoneId.of("UTC");
 
     @Inject
     private EventSource eventSource;
     @Inject
     private AggregateService aggregateService;
+
     @Inject
     private JsonObjectToObjectConverter jsonObjectConverter;
+
+    @Inject
+    private RotaSlotToNonDefaultDayConverter rotaSlotToNonDefaultDayConverter;
+
+    @Inject
+    private ProvisionalBookingService provisionalBookingService;
+
+    @Inject
+    private ObjectToJsonObjectConverter objectToJsonObjectConverter;
+
+    @Inject
+    private NonDefaultDayDurationBuilder nonDefaultDayDurationBuilder;
+
     @Inject
     private CommandToDomainConverter commandToDomainConverter;
+
     @Inject
-    private HearingListingNeedsConverterCommandToCore hearingListingNeedsConverterCommandToCore; //LPT-1090 check if we still need this
-    @Inject
-    private HearingSlotsService hearingSlotsService;
+    private HearingTypeFactory hearingTypeFactory;
+
     @SuppressWarnings("squid:S3655")
     @Handles("listing.command.list-next-hearings-enriched-v2")
     public void listNextHearings(final JsonEnvelope command) throws EventStreamException {
@@ -81,7 +111,7 @@ public class ListNextHearingCommandHandler {
         final SeedingHearing seedingHearing = listNextHearingsEnriched.getSeedingHearing();
         final UUID seedingHearingId = seedingHearing.getSeedingHearingId();
         final String hearingDay = seedingHearing.getSittingDay();
-        final List<uk.gov.justice.listing.commands.HearingListingNeeds> hearings = listNextHearingsEnriched.getListNextHearings().getHearings().stream().map(hearingListingNeedsConverterCommandToCore::convert).collect(toList());
+        final List<HearingListingNeeds> hearings = listNextHearingsEnriched.getListNextHearings().getHearings();
         final String adjournedFromDate = listNextHearingsEnriched.getAdjournedFromDate();
         final List<CourtCentreDefaults> courtCentresDetails = listNextHearingsEnriched.getCourtCentresDetails().stream()
                 .map(courtCentreDetails -> CourtCentreDefaults.courtCentreDefaults()
@@ -89,9 +119,9 @@ public class ListNextHearingCommandHandler {
                         .withDefaultDuration(courtCentreDetails.getDefaultDuration())
                         .withDefaultStartTime(courtCentreDetails.getDefaultStartTime())
                         .build())
-                .toList();
+                .collect(toList());
         final List<UUID> shadowListedOffences = listNextHearingsEnriched.getListNextHearings().getShadowListedOffences();
-        updateSeedAggregateEventStream(command, StringUtils.EMPTY, seedingHearingId, (SeedHearingAggregate seedHearingAggregate) ->
+        updateSeedAggregateEventStream(command, seedingHearingId, (SeedHearingAggregate seedHearingAggregate) ->
                 seedHearingAggregate.requestNextHearings(hearings, hearingDay, courtCentresDetails, ofNullable(adjournedFromDate), shadowListedOffences));
 
     }
@@ -104,13 +134,40 @@ public class ListNextHearingCommandHandler {
             LOGGER.debug("'listing.command.list-next-hearing' received with payload {}", command.toObfuscatedDebugString());
         }
 
+        final Map<String, Integer> hearingTypesIdDurationMap = hearingTypeFactory.getHearingTypesIdDurationMap(command);
         final ListNextHearing listNextHearing = jsonObjectConverter.convert(command.payloadAsJsonObject(), ListNextHearing.class);
         final HearingListingNeeds commandHearing = listNextHearing.getHearing();
         final Map<UUID, CourtCentreDetails> courtCentres = listNextHearing.getCourtCentresDetails().stream()
                 .collect(Collectors.toMap(CourtCentreDetails::getId, cc -> cc));
 
         List<NonDefaultDay> nonDefaultDaysList = new ArrayList<>();
+        UUID bookingReference = null;
+        final AtomicBoolean countBasedSlots = new AtomicBoolean(false);
+        final boolean isSlotsBooked = isNotEmpty(commandHearing.getBookedSlots());
 
+        final CourtCentre defaultCourtCentre = commandHearing.getCourtCentre();
+
+        if (isSlotsBooked) {
+            final List<uk.gov.justice.listing.commands.NonDefaultDay> finalNonDefaultDaysList = nonDefaultDaysList;
+            commandHearing.getBookedSlots()
+                    .forEach(b -> finalNonDefaultDaysList.add(rotaSlotToNonDefaultDayConverter.convert(b, defaultCourtCentre)));
+        } else {
+            if (nonNull(listNextHearing.getAdjournedFromDate()) && nonNull(commandHearing.getBookingReference())) {
+                bookingReference = commandHearing.getBookingReference();
+                final List<CourtSchedule> courtScheduleList = getCourtSchedules(bookingReference.toString());
+                if(!courtScheduleList.isEmpty()) {
+                    Collections.sort(courtScheduleList);
+                    countBasedSlots.set(!courtScheduleList.get(0).getMaxSlots().equals(0));
+                } else {
+                    countBasedSlots.set(false);
+                }
+                generateNonDefaultDays(nonDefaultDaysList, courtScheduleList, countBasedSlots.get(), commandHearing);
+            }
+
+            if (isSchedulingAndListingUpdateRequired(commandHearing.getJurisdictionType(), nonDefaultDaysList)) {
+                nonDefaultDaysList = nonDefaultDayDurationBuilder.updateNonDefaultDayWithNewDuration(nonDefaultDaysList, commandHearing.getEstimatedMinutes());
+            }
+        }
         final uk.gov.moj.cpp.listing.domain.Hearing domainHearing = commandToDomainConverter.convert(commandHearing, convertNonDefaultDaysToDomain(nonDefaultDaysList), listNextHearing.getShadowListedOffences());
 
         final CourtCentreDetails courtCentre = courtCentres.get(domainHearing.getCourtCentreId());
@@ -122,8 +179,7 @@ public class ListNextHearingCommandHandler {
                 .build();
         final String adjournedFromDate = listNextHearing.getAdjournedFromDate();
 
-        final UUID finalBookingReference = commandHearing.getBookingReference();
-        final boolean isSlotsBooked = isNotEmpty(commandHearing.getBookedSlots());
+        final UUID finalBookingReference = bookingReference;
         updateHearingEventStream(command, commandHearing.getId(), (Hearing hearing) -> {
             final Stream<Object> listingEvents = hearing.list(domainHearing.getId(),
                     domainHearing.getType(),
@@ -141,14 +197,13 @@ public class ListNextHearingCommandHandler {
                     courtCentreDefaults,
                     domainHearing.getCourtApplications(),
                     domainHearing.getCourtApplicationPartyListingNeeds(),
+                    hearingTypesIdDurationMap.get(domainHearing.getType().getId().toString()),
                     ofNullable(adjournedFromDate),
                     domainHearing.getWeekCommencingStartDate(),
                     domainHearing.getWeekCommencingEndDate(),
                     domainHearing.getWeekCommencingDurationInWeeks(),
-                    domainHearing.getHearingDays(),
                     domainHearing.getNonDefaultDays(),
-                    domainHearing.getNonSittingDays(),
-                    isSlotsBooked,
+                    countBasedSlots.get(),
                     listNextHearing.getHearing().getBookingType(),
                     listNextHearing.getHearing().getPriority(),
                     listNextHearing.getHearing().getSpecialRequirements(),
@@ -190,7 +245,7 @@ public class ListNextHearingCommandHandler {
             LOGGER.debug("'deleting next hearings for hearingId: {} hearingDay: {}", seedingHearingId, hearingDay);
         }
 
-        updateSeedAggregateEventStream(command, seedingHearing.getSittingDay(), seedingHearingId, (SeedHearingAggregate seedHearingAggregate) ->
+        updateSeedAggregateEventStream(command, seedingHearingId, (SeedHearingAggregate seedHearingAggregate) ->
                 seedHearingAggregate.deleteNextHearings(seedingHearingId, hearingDay));
 
     }
@@ -254,6 +309,12 @@ public class ListNextHearingCommandHandler {
         return domainDefaultDays;
     }
 
+    private boolean isSchedulingAndListingUpdateRequired(final uk.gov.justice.core.courts.JurisdictionType jurisdictionType, final List<uk.gov.justice.listing.commands.NonDefaultDay> nonDefaultDays) {
+        return MAGISTRATES.equals(jurisdictionType)
+                && !nonDefaultDays.isEmpty()
+                && nonDefaultDays.stream().anyMatch(ndd -> StringUtils.isNotEmpty(ndd.getCourtScheduleId()));
+    }
+
     private void updateHearingEventStream(final JsonEnvelope command, final UUID hearingId,
                                           final Function<Hearing, Stream<Object>> aggregatorFunction) throws EventStreamException {
         final EventStream eventStream = eventSource.getStreamById(hearingId);
@@ -263,18 +324,54 @@ public class ListNextHearingCommandHandler {
         eventStream.append(events.map(toEnvelopeWithMetadataFrom(command)));
     }
 
-    private void updateSeedAggregateEventStream(final JsonEnvelope command, final String sittingDay, final UUID seedHearingId,
+    private void updateSeedAggregateEventStream(final JsonEnvelope command, final UUID seedHearingId,
                                                 final Function<SeedHearingAggregate, Stream<Object>> aggregatorFunction) throws EventStreamException {
         final EventStream eventStream = eventSource.getStreamById(seedHearingId);
         final SeedHearingAggregate seedHearingAggregate = aggregateService.get(eventStream, SeedHearingAggregate.class);
-        final List<DeleteNextHearingRequested> deleteNextHearingRequestedList =
-                seedHearingAggregate.retrieveDeleteHearingsList(seedHearingId, sittingDay);
 
-        for (final DeleteNextHearingRequested deleteNextHearingRequested : deleteNextHearingRequestedList) {
-            hearingSlotsService.delete(deleteNextHearingRequested.getHearingId());
-        }
         final Stream<Object> events = aggregatorFunction.apply(seedHearingAggregate);
         eventStream.append(events.map(toEnvelopeWithMetadataFrom(command)));
     }
+
+    private List<CourtSchedule> getCourtSchedules(final String bookingId) {
+        final Map<String, String> paramsMap = new HashMap<>();
+        paramsMap.put("bookingIds", bookingId);
+        final Response slotsResponse = provisionalBookingService.getSlots(paramsMap);
+        final JsonObject resultJson = objectToJsonObjectConverter.convert(slotsResponse.getEntity());
+
+        final List<CourtSchedule> courtScheduleList = new ArrayList<>();
+
+        final JsonArray provisionalSlots = resultJson.getJsonArray("provisionalSlots");
+        for (int i = 0; i < provisionalSlots.size(); i++) {
+
+            courtScheduleList.add(jsonObjectConverter.convert(provisionalSlots.getJsonObject(i), CourtSchedule.class));
+        }
+        return courtScheduleList;
+    }
+
+    private void generateNonDefaultDays(final List<uk.gov.justice.listing.commands.NonDefaultDay> nonDefaultDaysList,
+                                        final List<CourtSchedule> courtScheduleList,
+                                        final Boolean isCountBasedSlot, final HearingListingNeeds commandHearing) {
+        final OffsetDateTime startDate = CommandToDomainConverter.getStartDateTime(commandHearing)
+                .toInstant().atOffset(ZoneOffset.UTC);
+        final int hour = startDate.getHour();
+        final long minute = startDate.getMinute();
+        courtScheduleList.forEach(cs ->
+                nonDefaultDaysList.add(
+                        uk.gov.justice.listing.commands.NonDefaultDay.nonDefaultDay()
+                                .withCourtScheduleId(cs.getCourtScheduleId())
+                                .withOucode(cs.getOuCode())
+                                .withSession(cs.getCourtSession())
+                                .withDuration(isCountBasedSlot ? 1 : commandHearing.getEstimatedMinutes())
+                                .withCourtRoomId(cs.getCourtRoomNumber()) // for prospect developers, names mismatch but fields point to the same context
+                                .withStartTime(isBlank(cs.getHearingStartTime()) ? cs.getSessionDate().atStartOfDay(UTC).withHour(hour).minusMinutes(minute) : ZonedDateTime.parse(cs.getHearingStartTime()))
+                                .withRoomId(cs.getCourtRoomId())
+                                .withCourtCentreId(cs.getCourtHouseId())
+                                .build()
+                )
+
+        );
+    }
+
 
 }
